# docs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
_plan/: atualizacao-arquitetura-postgresql.md  evolucao-cogfy-para-bedrock.md
arquitetura/: componentes-estruturantes.md  fluxo-de-dados.md  visao-geral.md
docs/: CONTRIBUTING.md  README.md  index.md
docs/apresentacoes/: index.md
docs/arquitetura/: componentes-estruturantes.md  fluxo-de-dados.md  postgresql.md  pubsub-workers.md  visao-geral.md
docs/blog/: .authors.yml
docs/infraestrutura/: arquitetura-gcp.md  devvm.md  sandbox-vms.md  secrets-iam.md  terraform-guide.md
docs/modulos/: agencies.md  arvore-tematica.md  bronze-layer-gcs.md  cogfy-integracao.md  data-platform.md  embeddings-api.md  gobus-mcp.md  graphql-api.md  growthbook.md  mlflow.md  news-enrichment-worker.md  portal.md  scraper.md  spaces-streamlit.md  typesense-local.md  umami.md
docs/onboarding/: airflow-tutorial.md  (+12 more)
infraestrutura/: arquitetura-gcp.md  secrets-iam.md
modulos/: agencies.md  arvore-tematica.md  cogfy-integracao.md  portal.md  scraper.md  spaces-streamlit.md
onboarding/: primeiro-pr.md  roteiro-onboarding.md  setup-backend.md
plano/: PLANO_IMPLEMENTACAO.md
scripts/: README-convert.md  adicionar_disclaimers.py  atualizar_documento_v3.py  convert_md_to_docx.py  convert_md_to_odt.py  convert_to_docx_with_template.py  merge_docx.py  merge_docx_advanced.py  merge_docx_complete.py  merge_docx_with_docxcompose.py  test_hyperlinks.py
workflows/: docker-builds.md  scraper-pipeline.md
(+100 files in other folders)
