[tool.poetry]
name = "destaquesgovbr-docs"
version = "0.1.0"
description = "Documentação técnica do DestaquesGovbr"
authors = ["DestaquesGovbr <destaquesgovbr@gestao.gov.br>"]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
